deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-server
        image: ghcr.io/sicpa-foundations/hello-app:c0dac16
        ports:
        - containerPort: 8080
