service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
