ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello-app.aws2.trustb.cc
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-app-service
              port:
                number: 80
